dev screen improvement

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <h2 data-lang-key="adminPanel">管理パネル</h2>
                 <div style="display:flex; gap:8px; align-items:center; margin:8px 0;">
                     <span id="admin-user-email" style="font-size:14px; color:var(--text-secondary-color);"></span>
-                    <button id="btn-admin-logout" class="btn btn-secondary btn-sm">ログアウト</button>
+                    <button id="btn-admin-logout" class="btn btn-secondary btn-sm" data-lang-key="logout">ログアウト</button>
                 </div>
                 <div class="admin-tabs">
                     <div class="admin-tab active" data-tab="editor" data-lang-key="tabProgramEdit">プログラム編集</div>
