--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         <button id="help-btn" class="top-bar-btn" title="ヘルプ"><i class="ph ph-question"></i></button>
         <button id="theme-switch-btn" class="top-bar-btn" title="Toggle Theme"><i class="ph ph-moon"></i></button>
         <button id="lang-switch-btn" class="top-bar-btn" title="Switch Language"><i class="ph ph-translate"></i></button>
+        <div id="lang-menu" class="lang-menu">
+            <a href="#" data-lang="ja">日本語</a>
+            <a href="#" data-lang="en">English</a>
+            <a href="#" data-lang="es">Español</a>
+            <a href="#" data-lang="id">Bahasa Indonesia</a>
+        </div>
         <button id="admin-entry-btn" class="top-bar-btn" title="管理画面へ"><i class="ph ph-gear-six"></i></button>
     </div>
 
@@ -365,6 +371,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js" defer></script>
     <!-- Firebase 初期化 -->
     <script src="firebase-init.js" defer></script>
+    <script src="language-loader.js" defer></script>
     <script src="script.js" defer></script>
 </body>
 </html>
