added language pack: Arabic

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <a href="#" data-lang="ne">नेपाली (Nepali)</a>
                     <a href="#" data-lang="zh">中文 (Chinese)</a>
                     <a href="#" data-lang="ko">한국어 (Korean)</a>
+                    <a href="#" data-lang="ar">العربية</a>
                 </div>
                 <button id="admin-entry-btn" class="header-btn" title="管理画面へ"><i class="ph ph-gear-six"></i></button>
             </div>
