home screen fix

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                 </div>
                 <button id="lang-switch-btn" class="header-btn" title="Switch Language"><i class="ph ph-translate"></i></button>
                 <div id="lang-menu" class="lang-menu">
-                    <a href="#" data-lang="ja">日本語</a>
+                    <a href="#" data-lang="ja">日本語 (Japanese)</a>
                     <a href="#" data-lang="en">English</a>
-                    <a href="#" data-lang="es">Español</a>
-                    <a href="#" data-lang="id">Bahasa Indonesia</a>
+                    <a href="#" data-lang="es">Español (Spanish)</a>
+                    <a href="#" data-lang="id">Bahasa Indonesia (Indonesian)</a>
                     <a href="#" data-lang="hi">हिन्दी (Hindi)</a>
                     <a href="#" data-lang="ne">नेपाली (Nepali)</a>
                     <a href="#" data-lang="zh">中文 (Chinese)</a>
                     <a href="#" data-lang="ko">한국어 (Korean)</a>
-                    <a href="#" data-lang="ar">العربية</a>
+                    <a href="#" data-lang="ar">العربية (Arabic)</a>
                 </div>
                 <button id="admin-entry-btn" class="header-btn" title="管理画面へ"><i class="ph ph-gear-six"></i></button>
             </div>
