--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.2/Sortable.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js" defer></script>
 </head>
-<body>
+<body class="fonts-loading">
 
 
 
